# PaperBoy

./: .dockerignore  .gitignore  README.md  example.env  managed_policies.json  pyproject.toml
deploy/: Dockerfile  Dockerfile.selenium  docker-compose.yml
paperboy/: __main__.py  app.py  retry.py  settings.py  summerizer.py  system_message.py  text_processing.py  youtube_transcript.py
tests/: test_paperboy.py
