[tool.poetry]
name = "paperboy"
version = "0.1.0"
description = ""
authors = ["Michael Taylor <90michaeltaylor@gmail.com>"]

[tool.taskipy.tasks]
app = "python paperboy/app.py"
run = {cmd="docker compose -f deploy/docker-compose.yml --project-directory . up --build"}

[tool.poetry.dependencies]
python = "^3.8"
gTTS = "^2.2.4"
"discord.py" = "^1.7.3"
python-slugify = "^6.1.2"
urlextract = "^1.6.0"
sqlitedict = "^2.0.0"
moviepy = "^1.0.3"
python-dotenv = "^0.20.0"
pydantic = "^1.9.2"
selenium = "^4.4.0"
google-cloud-texttospeech = "^2.12.1"
sumy = "^0.10.0"
trafilatura = "^1.3.0"
courlan = "^0.8.3"
tld = "^0.12.6"
validators = "^0.20.0"
backoff = "^2.1.2"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"
taskipy = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
